--- a/createEvent.html
+++ b/createEvent.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8">
         <title>Loan request Musical - Create Event</title>
         <link rel="stylesheet" href="createEvent.css">
-        <script src = "itemList.js" type = "module"></script>
-        <script src = "createEvent.js" type = "module"></script>
+        <script src = "createEventJS/HTMLHandler.js" type = "module" defer></script>
+        <script src = "createEventJS/NavHandler.js" defer></script>
+        <script src = "createEventJS/ServerHandler.js" type = "module" defer></script>
     </head>
     <body>
         <section>
             <h2>Create an event</h2>
-            <form class="form">
+            <form class="form" id = "createEventForm">
                 <div class = "main input-box">
                     <label for="eventTitle">Event title</label>
                     <input type="text" id="eventTitle" name="eventTitle" required>
@@ -42,8 +43,8 @@
                     </div>
                 </div>
                 <div class = "main main-button">
-                    <button onclick="">Add Item</button>
-                    <ul>
+                    <button onclick="openPopup()">Add Item</button>
+                    <ul id = "item-list">
                     </ul>
                 </div>
                 <div class = "main description">
@@ -55,10 +56,41 @@
                         <button onclick="goBack()">Cancel</button>
                     </div>
                     <div class = "main-button">
-                        <button type="submit">Create event</button>
+                        <button id = "create-event">Create event</button>
                     </div>
                 </div>
             </form>
         </section>
+
+        
+        <!-- This will be the content of the popup -->
+        <div id = "overlay" class = "overlay"></div>
+        <div class = "popup" id = "popup">
+            <div class = "popup-content">
+                <div id = "radio-buttons">
+                    <div>
+                        <label for="Sound & Instruments">Sound & Instruments</label>
+                        <input type="radio" id="Sound & Instruments" name="category" value="Sound & Instruments" checked="checked">
+                    </div>
+                    <div>
+                        <label for="Microphones">Microphones</label>
+                        <input type="radio" id="Microphones" name="category" value="Microphones">
+                    </div>
+                    <div>
+                        <label for="Cables">Cables</label>
+                        <input type="radio" id="Cables" name="category" value="Cables">
+                    </div>
+                </div>
+                <div class = "selectors">
+                    <select name = "item-selector" id = "item-selector">
+                    </select>
+                    <input id = "quantity" type="number" min="1" max="100" value="1">
+                </div>
+            </div>
+            <div class = "controls">
+                <button class = "close-button" onclick="closePopup();">Close</buttons>
+                <button class = "save-button" onclick="saveSelection(); closePopup();">Save</buttons>
+            </div>
+        </div>
     </body>
 </html>
