--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <title>Loan request Musical</title>
+        <meta charset="UTF-8">
+        <title>Loan request Musical - Home</title>
         <link rel="stylesheet" href="index.css">
-        <script src="main.js" defer></script>
+        <script src="drawCalendar.js" defer></script>
     </head>
 
     <body>
@@ -37,9 +38,10 @@
                     <div class = "day">Sat</div>
                     <div class = "day">Sun</div>
                 </div>
-                <div class="dates" id="dates"></div>
+                <div class="dates" id="dates">
+                </div>
                 <div class = "button createEvent">
-                    <button>Create an event</button>
+                    <button onclick="switchPage()">Create an event</button>
                 </div>
             </div>
         </section>
