--- a/createEvent.html
+++ b/createEvent.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Loan request Musical - Create Event</title>
         <link rel="stylesheet" href="createEvent.css">
+        <link rel = "icon" type = "image/x-icon" href = "res/Screenshot_20250302_174951.png">
         <script src = "createEventJS/HTMLHandler.js" type = "module" defer></script>
         <script src = "createEventJS/NavHandler.js" defer></script>
         <script src = "createEventJS/ServerHandler.js" type = "module" defer></script>
