--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Loan request Musical - Home</title>
         <link rel="stylesheet" href="index.css">
+        <link rel = "icon" type = "image/x-icon" href = "res/Screenshot_20250302_174951.png">
         <script src="indexJS/drawCalendar.js" defer type = "module"></script>
         <script src="indexJS/eventHandler.js" defer type = "module"></script>
     </head>
