Feat: Add main website link

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <link rel = "icon" type = "image/x-icon" href = "res/Screenshot_20250302_174951.png">
         <script src="indexJS/drawCalendar.js" defer type = "module"></script>
         <script src="indexJS/eventHandler.js" defer type = "module"></script>
-    </head>
+    </head>     
 
     <body>
         <header>
             <nav>
                 <ul>
                     <li>Sign in</li>
-                    <li>Main website</li>
+                    <li><a href = https://musical.epfl.ch>Main website</a></li>
                 </ul>
             </nav>
             <h2>Musical loan requests calendar</h2>       
