Refactor code stucture

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Loan request Musical - Home</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
         <link rel = "icon" type = "image/x-icon" href = "res/Screenshot_20250302_174951.png">
-        <script src="indexJS/drawCalendar.js" defer type = "module"></script>
-        <script src="indexJS/eventHandler.js" defer type = "module"></script>
+        <script src="js/main/index/draw-calendar.js" defer type = "module"></script>
+        <script src="js/main/index/event-handler.js" defer type = "module"></script>
     </head>     
 
     <body>
