--- a/create-event.html
+++ b/create-event.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Loan request Musical - Create Event</title>
-        <link rel="stylesheet" href="createEvent.css">
+        <link rel="stylesheet" href="css/create-event.css">
         <link rel = "icon" type = "image/x-icon" href = "res/Screenshot_20250302_174951.png">
-        <script src = "createEventJS/HTMLHandler.js" type = "module" defer></script>
-        <script src = "createEventJS/NavHandler.js" defer></script>
-        <script src = "createEventJS/ServerHandler.js" type = "module" defer></script>
+        <script src = "js/main/create-event/html-handler.js" type = "module" defer></script>
+        <script src = "js/main/create-event/nav-handler.js" defer></script>
+        <script src = "js/main/create-event/server-handler.js" type = "module" defer></script>
     </head>
     <body>
         <section>
